--- a/master.html.tmpl
+++ b/master.html.tmpl
@@ -18,7 +18,7 @@
       </hgroup>
       <nav>
         <ul>
-          <li><a href="/counter">Counter</a></li>
+          <li><a href="/">Counter</a></li>
           <li><a href="/foo">Foo</a></li>
           <li><a href="/bar">Bar</a></li>
         </ul>
