htmx prefers lowercase

--- a/master.html.tmpl
+++ b/master.html.tmpl
@@ -33,7 +33,7 @@
 
     <footer>
       <small
-        >Built with <a href="https://picocss.com">Pico</a>, HTMX and Go.
+        >Built with <a href="https://picocss.com">Pico</a>, htmx and Go.
       </small>
     </footer>
   </body>
